--- a/employee-api/package.json
+++ b/employee-api/package.json
@@ -11,28 +11,33 @@
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "csv": "^6.2.1",
     "express": "^4.18.2",
     "sequelize": "^6.25.0",
     "sqlite3": "^5.1.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^29.1.2",
     "@types/node": "^18.8.4",
     "@types/shelljs": "^0.8.11",
     "fs-extra": "^10.1.0",
+    "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
