--- a/employee-api/package.json
+++ b/employee-api/package.json
@@ -19,18 +19,23 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "csv": "^6.2.1",
+    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
+    "helmet": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.25.0",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.1.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.8.4",
     "@types/shelljs": "^0.8.11",
+    "@types/streamifier": "^0.1.0",
     "fs-extra": "^10.1.0",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
