--- a/employee-ui/package.json
+++ b/employee-ui/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.5",
+    "axios": "^1.1.2",
     "craco-less": "^2.0.0",
+    "csv-parse": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
