--- a/employee-ui/package.json
+++ b/employee-ui/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
@@ -47,10 +45,13 @@
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.1.2",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.2.0",
     "react-test-renderer": "^18.2.0"
   }
 }
